--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@
 @import "./assets/mixins";
 @import "./assets/responsive";
 @import "./assets/typography";
-@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css");
 //////////////////////////////////////////////////////////////////////////////////////////
 // ROOM STYLES
 
@@ -315,7 +315,6 @@ input.chat {
   background-color: white;
   border-radius: 5px;
   width: 80%;
-  max-width: 90%;
 }
 
 .notify-text {
@@ -335,6 +334,10 @@ input.chat {
   height: 1.8em;
   margin-left: 2.5%;
   margin-bottom: 10px;
+}
+
+.half {
+  max-width: 60%;
 }
 
 input.notify-input {
@@ -420,7 +423,7 @@ input.notify-input {
 /* General rule */
 .button-big
 {
-  background-color: rgba(255,255,255,0.4);
+  background-color: rgba(255,255,255,0.7);
   font-size: 2.5em;
   width: 3em;
   text-align:center;
@@ -436,178 +439,30 @@ input.notify-input {
 
 .sms
 {
-  color: #0096ff;
-  border: 1px solid #0096ff;
+  color: #1786FB;
+  border: 1px solid #1786FB;
 }
 
-.twitter:hover
+.wa
 {
-  animation: twitterAnim 0.4s normal forwards linear;
-  -webkit-animation: twitterAnim 0.4s normal forwards linear;
-}
-@keyframes twitterAnim {
-  50% {
-    background-color: #0096ff;
-  }
-  100% {
-    background-color: #0096ff;
-    border: 1px solid #0096ff;
-    color: #fff;
-  }
+  color: #43D954;
+  border: 1px solid #43D954;
 }
 
-@-webkit-keyframes twitterAnim {
-  50% {
-    background-color: #0096ff;
-  }
-  100% {
-    background-color: #0096ff;
-    border: 1px solid #0096ff;
-    color: #fff;
-  }
+.wa
+{
+  color: #2f726a;
+  border: 1px solid #2f726a;
 }
 
-/* Facebook class and animation */
 .facebook
 {
   color: #3B5998;
   border: 1px solid #3B5998;
 }
 
-.facebook:hover
+.close
 {
-  animation: facebookAnim 0.4s normal forwards linear;
-  -webkit-animation: facebookAnim 0.4s normal forwards linear;
-}
-
-@keyframes facebookAnim {
-  50% {
-    background-color: #3B5998;
-  }
-  100% {
-    background-color: #3B5998;
-    border: 1px solid #3B5998;
-    color: #fff;
-  }
-}
-
-@-webkit-keyframes facebookAnim {
-  50% {
-    background-color: #3B5998;
-  }
-  100% {
-    background-color: #3B5998;
-    border: 1px solid #3B5998;
-    color: #fff;
-  }
-}
-
-/* Google class and animation */
-.gplus
-{
-  color: #dd4b39;
-  border: 1px solid #dd4b39;
-}
-
-.gplus:hover
-{
-  animation: gplusAnim 0.4s normal forwards linear;
-  -webkit-animation: gplusAnim 0.4s normal forwards linear;
-}
-
-@keyframes gplusAnim {
-  50% {
-    background-color: #dd4b39;
-  }
-  100% {
-    background-color: #dd4b39;
-    border: 1px solid #dd4b39;
-    color: #fff;
-  }
-}
-
-@-webkit-keyframes gplusAnim {
-  50% {
-    background-color: #dd4b39;
-  }
-  100% {
-    background-color: #dd4b39;
-    border: 1px solid #dd4b39;
-    color: #fff;
-  }
-}
-
-/* Dribble class and animation */
-.dribbble
-{
-  color: #ea4c89;
-  border: 1px solid #ea4c89;
-}
-
-.dribbble:hover
-{
-  animation: dribbbleAnim 0.4s normal forwards linear;
-  -webkit-animation: dribbbleAnim 0.4s normal forwards linear;
-}
-
-@-webkit-keyframes dribbbleAnim {
-  50% {
-    background-color: #ea4c89;
-  }
-  100% {
-    background-color: #ea4c89;
-    border: 1px solid #ea4c89;
-    color: #fff;
-  }
-}
-
-@keyframes dribbbleAnim {
-  50% {
-    background-color: #ea4c89;
-  }
-  100% {
-    background-color: #ea4c89;
-    border: 1px solid #ea4c89;
-    color: #fff;
-  }
-}
-/* Yahoo class and animation */
-.yahooo
-{
-  color: #720e9e;
-  border: 1px solid #720e9e;
-}
-
-.yahooo:hover
-{
-  animation: yahoooAnim 0.4s normal forwards linear;
-  -webkit-animation: yahoooAnim 0.4s normal forwards linear;
-}
-
-@-webkit-keyframes yahoooAnim {
-  50% {
-    background-color: #720e9e;
-  }
-  100% {
-    background-color: #720e9e;
-    border: 1px solid #720e9e;
-    color: #fff;
-  }
-}
-@keyframes yahoooAnim {
-  50% {
-    background-color: #720e9e;
-  }
-  100% {
-    background-color: #720e9e;
-    border: 1px solid #720e9e;
-    color: #fff;
-  }
-}
-
-/* Links */
-a
-{
-  color: #9b59b6;
-  text-decoration: none;
+  color: #555555;
+  border: 1px solid #555555;
 }
