--- a/src/style.scss
+++ b/src/style.scss
@@ -466,3 +466,124 @@ input.notify-input {
   color: #555555;
   border: 1px solid #555555;
 }
+
+
+
+$t: .3s;
+
+.share-container{
+  position: absolute;
+  right: 12px;
+  top: 12px;
+}
+
+.share, .share:before, .share:after, .fab {
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+  position: absolute;
+  cursor: pointer;
+}
+
+.share {
+  position: relative;
+  &:before, 
+  &:after {
+    content: '';
+    will-change: transform;
+  }
+  &:before {
+    background: url(http://goo.gl/dVG3Fd) center/28px no-repeat;
+    z-index: 5;
+    transition: $t;
+  }
+  &:after {
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(#000, .3);
+    z-index: -1;
+    transition: $t * 1.3;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  &.active {
+    &:before { transform: rotate(45deg); }
+/*     &:after {  */
+      // width: 3000px;
+      // height: 3000px;
+    /* } */
+  }
+}
+
+.fab {
+  box-shadow: 0 2px 5px rgba(#000, .3);
+  transition: $t;
+  animation: $t down forwards;
+  opacity: 0;
+  will-change: animation;
+  &:nth-child(1) { // sms
+    top: 132px;
+    background-color:#0168b3;
+    i{
+      position:absolute;
+      left: 50%;
+      top:50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &:nth-child(2) { //twitter
+    top: 66px;
+    background-color:#1da1f2;
+    i{
+      position:absolute;
+      left: 50%;
+      top:50%;
+      transform: translate(-50%, -50%);
+    }
+
+  }
+  &:nth-child(3) { // whatsapp
+    background-color:#43d854;
+    i{
+      position:absolute;
+      left: 50%;
+      top:50%;
+      transform: translate(-50%, -50%);
+    }
+
+
+  }
+  &.active {
+    animation: $t * 1.6 up forwards;
+    &:nth-child(1) {
+      animation-delay: $t * 1.3;
+    }
+    &:nth-child(2) {
+      animation-delay: $t / 1.5;
+    }
+  }
+  &.no {
+    animation: none;
+  }
+}
+
+@keyframes up {
+  50% {
+    transform: translateY(170%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(130%);
+  }
+}
+
+@keyframes down {
+  0% {
+    opacity: 1;
+    transform: translateY(130%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(0);
+    top: 0;
+  }
+}
