--- a/src/assets/_chat-input.scss
+++ b/src/assets/_chat-input.scss
@@ -7,7 +7,7 @@
 .chat-lower {
     position:relative;
     width:100%;
-    flex: 0 0 auto;
+    display: flex;
     background-color: $chat-lower;
     transition: all 333ms ease;
 }
