--- a/src/assets/_chat-input.scss
+++ b/src/assets/_chat-input.scss
@@ -69,11 +69,11 @@ span {
     max-height: calc-em(80px);
     flex: 0 0 auto;
     padding: 0.2em 0 0.3em;
-    color: white;
+    color: #1b1d21;
     line-height: 1;
     padding-right: 40px;
 &::-webkit-input-placeholder {
-     color: white;
+     color: #aaaaaa;
  }
 }
 
