--- a/src/style.scss
+++ b/src/style.scss
@@ -234,7 +234,7 @@ body {
 .action-text {
   font-size: calc-em(36px);
   text-align: center;
-  color: white;
+  color: #1b1d21;
   margin-bottom: .1em;
 }
 
