--- a/src/css/_controls.scss
+++ b/src/css/_controls.scss
@@ -44,7 +44,7 @@
   height: calc-em(50px);
   border-radius:50%;
   background-color: white;
-  background-image: url(./assets/img/mute.png);
+  background-image: url(./assets/img/icMute@2x.png);
   background-size: calc-em(24px) calc-em(16px);
   background-repeat: no-repeat;
   background-position: center center;
